# NewsAI

./: %1  .env.example  .gitignore  AGENT_PROMPTS.md  NewsAI_project.md  NewsAI_workspace.md  QUICKSTART.md  README.md  agentlogic.md  bootstrap.py  e2e_output.txt  e2e_report_20260511_171704.json  e2e_report_20260511_220738.json  e2e_report_20260511_224515.json  e2e_report_20260511_230616.json  e2e_report_v2_20260511_234708.json  e2e_report_v2_20260512_123733.json  e2e_report_v2_20260512_140304.json  e2e_test_v2.py  fix_and_run.py  pyproject.toml  run.py  run_final_demo.py  run_full_pipeline.py  run_full_pipeline_with_verify.py  run_production_demo.py  run_topic_curator_only.py  test_url_field_fix.py  worklog.md
.claude/: settings.local.json
config/: koc_profile.yaml
docs/: AGENT_PROMPTS_MASTER.md  ARCHITECTURE.md  Agent_roster.md  Agent_roster_v2.md  ByteIntern_Submission.md  CONTENT_DESIGN.md  CORE_CODE_LOGIC.md  ClaudeCode_Execution_Prompt.md  DATABASE_SCHEMA.md  Feishu.md  FeishuBase_Usage_Examples.md  KOC_persona.md  NewsAI_workspace.md  OKR_第五周期_5.5-5.7.md  PROJECT_OVERVIEW.md  Prompts_v3.md  SOP.md  SOP_v2.md  _ANALYSIS_AND_RECOMMENDATIONS.md  architecture.md  explain_limitation.md  prompts_design.md  v3.1_topology_fix.md  提交文档使用指南.md
feishu_adapter/: base_client.py  doc_storage.py  feishu_storage.py  tools.py
fix/: fix_agents.py  fix_agents_v2.py  fix_doc_content.py  fix_topic_curator_v2.py  fix_topic_curator_v3.py
mock_data/: README.md  agent_roster.json  analytics_mock.json  arxiv_papers.json  douyin_hot.json  github_trending.json  hackernews_hot.json  (+6 more)
(+146 files in other folders)
